# SiMLInt

./: .gitignore  README.md
docs/: CNAME  ML_training.md  README.md  _config.yml  data-generation.md  docker-image.md  docker-images.md  example-installation.md  example-run.md  inference.md  training_implementation.md  workflow.md
docs/_layouts/: default.html
files/: README.md
files/1-data-generation/: BOUT.inp  fine_init.sh  fine_trajectories.sh
files/2-coarsening/: submit-resize.sh
files/3-coarse-simulations/: run_coarse_sims.sh
files/3-coarse_simulations/: coarse_BOUT.inp  run_coarse_sims.sh
files/4-training-data/: gen_training_nc.py  sub_gen_training_nc.sh
files/5-training/: README.md  data_read.py  submit-training.sh  tf_utils.py  training.py
files/6-simulation/: start_db.py  submit-hw.sh
files/7-visualisation/: Visualise.ipynb
files/HW-error-correction/: CMakeLists.txt  hw.cxx
files/ML_model/: padding.py  write_zero_model.py  zero_model_test.py
files/coarsening/: resize_trajectory.py  restart.py  submit-resize.sh
files/container/: Dockerfile  README.md  entrypoint.sh  smartsim-hw.sh
files/container/gpu/: Dockerfile
files/containerised-runs/: BOUT.restart.0.nc
files/containerised-runs/data/: BOUT.inp  README.md
files/data-generation/: fine_init.sh  fine_trajectories.sh
files/models/: model-hw-20240427-164026-vort.pb  model-hw-20240427-210530-dens.pb
files/modified_HW/: BOUT.inp  CMakeLists.txt  hw.cxx
files/run_SmartSim/: start_db.py  submit-hw.sh
files/training/: README.md  instructions.md  model.py  padding.py  training.py
